Use script to generate Dockerfiles

--- a/Dockerfile.esh
+++ b/Dockerfile.esh
@@ -5,7 +5,7 @@ ARG BUILDPLATFORM
 
 RUN echo "Build: $BUILDPLATFORM, target: $TARGETPLATFORM" > /log
 
-FROM bfren/alpine:alpine3.15.0-1.2.1
+FROM bfren/alpine:alpine<%= ${ALPINE_REVISION} %>-<%= ${BASE_REVISION} %>
 COPY --from=build /log /log
 
 ARG TARGETPLATFORM
