--- a/3.8/Dockerfile
+++ b/3.8/Dockerfile
@@ -28,4 +28,4 @@ RUN bf-install
 
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=5 CMD [ "healthcheck" ]
 
-ENTRYPOINT [ "bf-init", "/init" ]
+ENTRYPOINT [ "/init", "bf-init" ]
