--- a/Dockerfile.esh
+++ b/Dockerfile.esh
@@ -34,4 +34,4 @@ RUN bf-install
 
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=5 CMD [ "healthcheck" ]
 
-ENTRYPOINT [ "bf-init", "/init" ]
+ENTRYPOINT [ "/init" ]
