--- a/3.15/Dockerfile
+++ b/3.15/Dockerfile
@@ -18,8 +18,8 @@ ENV \
     BF_CRON_LOG_LEVEL=8 \
     # include hidden files and directories when fix-attrs.d processes them
     S6_FIX_ATTRS_HIDDEN=1 \
-    # ensure bf executables are added to S6 path
-    S6_GLOBAL_PATH=${BF_BIN}
+    # ensure bf and Alpine executables are added to S6 path
+    S6_GLOBAL_PATH=${BF_BIN}:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
 COPY ./overlay /
 COPY ./S6_VERSION /tmp/
