--- a/Dockerfile.esh
+++ b/Dockerfile.esh
@@ -18,6 +18,7 @@ ENV \
     BF_CRON_LOG_LEVEL=8 \
     # include hidden files and directories when fix-attrs.d processes them
     S6_FIX_ATTRS_HIDDEN=1 \
+    # set PATH - this is saved as part of the install script
     PATH=/command:${PATH}
 
 COPY ./overlay /
