--- a/3.13/Dockerfile
+++ b/3.13/Dockerfile
@@ -18,7 +18,8 @@ ENV \
     BF_CRON_LOG_LEVEL=8 \
     # include hidden files and directories when fix-attrs.d processes them
     S6_FIX_ATTRS_HIDDEN=1 \
-    S6_GLOBAL_PATH="${BF_BIN}:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+    # set PATH - this is saved as part of the install script
+    PATH=/command:${PATH}
 
 COPY ./overlay /
 COPY ./S6_VERSION /tmp/
