--- a/edge/Dockerfile
+++ b/edge/Dockerfile
@@ -17,8 +17,10 @@ ENV \
     # cron log levels are from 0 (most verbose) to 8 (default)
     BF_CRON_LOG_LEVEL=8 \
     # include hidden files and directories when fix-attrs.d processes them
-    S6_FIX_ATTRS_HIDDEN=1 \
-    # set PATH - this is saved as part of the install script
+    S6_FIX_ATTRS_HIDDEN=1
+
+ENV \
+    # add S6 executables to PATH
     PATH=/command:${PATH}
 
 COPY ./overlay /
