--- a/Dockerfile.esh
+++ b/Dockerfile.esh
@@ -19,6 +19,10 @@ ENV \
     # include hidden files and directories when fix-attrs.d processes them
     S6_FIX_ATTRS_HIDDEN=1
 
+ENV \
+    # add S6 executables to PATH
+    PATH=/command:${PATH}
+
 COPY ./overlay /
 COPY ./S6_VERSION /tmp/
 
