--- a/.github/workflows/dev-alpine3_13.yml
+++ b/.github/workflows/dev-alpine3_13.yml
@@ -59,6 +59,13 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      -
         name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
@@ -74,6 +81,9 @@ jobs:
             bfren/alpine-s6:alpine3.13-dev
             bfren/alpine-s6:alpine3.13-${{ steps.version_minor.outputs.contents }}-beta
             bfren/alpine-s6:alpine3.13-${{ steps.version.outputs.contents }}-beta
+            ghcr.io/bfren/alpine-s6:alpine3.13-dev
+            ghcr.io/bfren/alpine-s6:alpine3.13-${{ steps.version_minor.outputs.contents }}-beta
+            ghcr.io/bfren/alpine-s6:alpine3.13-${{ steps.version.outputs.contents }}-beta
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
