--- a/.github/workflows/publish-alpine3_15.yml
+++ b/.github/workflows/publish-alpine3_15.yml
@@ -53,6 +53,13 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      -
         name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
@@ -74,6 +81,15 @@ jobs:
             bfren/alpine-s6:alpine3.15-${{ steps.version_minor.outputs.contents }}
             bfren/alpine-s6:alpine3.15-${{ steps.version.outputs.contents }}
             bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}
+            ghcr.io/bfren/alpine-s6:latest
+            ghcr.io/bfren/alpine-s6:${{ steps.version_major.outputs.contents }}
+            ghcr.io/bfren/alpine-s6:${{ steps.version_minor.outputs.contents }}
+            ghcr.io/bfren/alpine-s6:${{ steps.version.outputs.contents }}
+            ghcr.io/bfren/alpine-s6:alpine3.15
+            ghcr.io/bfren/alpine-s6:alpine3.15-${{ steps.version_major.outputs.contents }}
+            ghcr.io/bfren/alpine-s6:alpine3.15-${{ steps.version_minor.outputs.contents }}
+            ghcr.io/bfren/alpine-s6:alpine3.15-${{ steps.version.outputs.contents }}
+            ghcr.io/bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
