--- a/.github/workflows/publish-alpine3_8.yml
+++ b/.github/workflows/publish-alpine3_8.yml
@@ -53,6 +53,13 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      -
         name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
@@ -70,6 +77,11 @@ jobs:
             bfren/alpine-s6:alpine3.8-${{ steps.version_minor.outputs.contents }}
             bfren/alpine-s6:alpine3.8-${{ steps.version.outputs.contents }}
             bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}
+            ghcr.io/bfren/alpine-s6:alpine3.8
+            ghcr.io/bfren/alpine-s6:alpine3.8-${{ steps.version_major.outputs.contents }}
+            ghcr.io/bfren/alpine-s6:alpine3.8-${{ steps.version_minor.outputs.contents }}
+            ghcr.io/bfren/alpine-s6:alpine3.8-${{ steps.version.outputs.contents }}
+            ghcr.io/bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
