--- a/.github/workflows/publish-alpineedge.yml
+++ b/.github/workflows/publish-alpineedge.yml
@@ -47,6 +47,13 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      -
         name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
@@ -63,6 +70,10 @@ jobs:
             bfren/alpine-s6:alpineedge-${{ steps.version_major.outputs.contents }}
             bfren/alpine-s6:alpineedge-${{ steps.version_minor.outputs.contents }}
             bfren/alpine-s6:alpineedge-${{ steps.version.outputs.contents }}
+            ghcr.io/bfren/alpine-s6:alpineedge
+            ghcr.io/bfren/alpine-s6:alpineedge-${{ steps.version_major.outputs.contents }}
+            ghcr.io/bfren/alpine-s6:alpineedge-${{ steps.version_minor.outputs.contents }}
+            ghcr.io/bfren/alpine-s6:alpineedge-${{ steps.version.outputs.contents }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
