Adding image source label

--- a/3.15/Dockerfile
+++ b/3.15/Dockerfile
@@ -5,8 +5,10 @@ ARG BUILDPLATFORM
 
 RUN echo "Build: $BUILDPLATFORM, target: $TARGETPLATFORM" > /log
 
-FROM bfren/alpine:alpine3.15.1-1.5.5
+FROM bfren/alpine:alpine3.15.2-1.5.5
 COPY --from=build /log /log
+
+LABEL org.opencontainers.image.source="https://github.com/bfren/docker-alpine-s6"
 
 ARG TARGETPLATFORM
 
