--- a/3.8/Dockerfile
+++ b/3.8/Dockerfile
@@ -8,6 +8,8 @@ RUN echo "Build: $BUILDPLATFORM, target: $TARGETPLATFORM" > /log
 FROM bfren/alpine:alpine3.8.5-1.5.5
 COPY --from=build /log /log
 
+LABEL org.opencontainers.image.source="https://github.com/bfren/docker-alpine-s6"
+
 ARG TARGETPLATFORM
 
 ARG BF_IMAGE
