--- a/Dockerfile.esh
+++ b/Dockerfile.esh
@@ -8,6 +8,8 @@ RUN echo "Build: $BUILDPLATFORM, target: $TARGETPLATFORM" > /log
 FROM bfren/alpine:alpine<%= ${ALPINE_REVISION} %>-<%= ${BASE_REVISION} %>
 COPY --from=build /log /log
 
+LABEL org.opencontainers.image.source="https://github.com/bfren/docker-alpine-s6"
+
 ARG TARGETPLATFORM
 
 ARG BF_IMAGE
