--- a/Dockerfile.esh
+++ b/Dockerfile.esh
@@ -8,6 +8,8 @@ RUN echo "Build: $BUILDPLATFORM, target: $TARGETPLATFORM" > /log
 FROM bfren/alpine:alpine<%= ${ALPINE_REVISION} %>-<%= ${BASE_REVISION} %>
 COPY --from=build /log /log
 
+LABEL org.opencontainers.image.source="https://github.com/bfren/docker-alpine-s6"
+
 ARG TARGETPLATFORM
 
 ARG BF_IMAGE
@@ -24,7 +26,6 @@ ENV \
     S6_CMD_WAIT_FOR_SERVICES_MAXTIME=0
 
 COPY ./overlay /
-COPY ./S6_VERSION /tmp/
 
 RUN bf-install
 
