--- a/.github/workflows/dev-alpine3_16.yml
+++ b/.github/workflows/dev-alpine3_16.yml
@@ -61,6 +61,8 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        with:
+          driver-opts: network=host
       -
         name: Build and export for testing
         uses: docker/build-push-action@v3
