Using matrix to simplify workflows

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,4 +1,4 @@
-name: dev-alpine3_16
+name: dev
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  test-alpine3_16:
+  test:
     runs-on: ubuntu-latest
     steps:
       -
@@ -24,7 +24,10 @@ jobs:
         name: Run tests
         run: |
           RUN=./tests/run-git.sh && chmod +x ${RUN} && ${RUN}
-  build-alpine3_16:
+  build:
+    strategy:
+      matrix:
+        alpine: [ "3.8", "3.9", "3.10", "3.11", "3.12", "3.13", "3.14", "3.15", "3.16", "3.17", "edge" ]
     runs-on: ubuntu-latest
     steps:
       -
@@ -34,6 +37,12 @@ jobs:
         name: Get repository name
         run: echo "REPOSITORY_NAME=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}')" >> $GITHUB_ENV
         shell: bash
+      -
+        name: Read image version
+        uses: bfren/read-file@v2
+        with:
+          file: ./VERSION_MAJOR
+        id: version_major
       -
         name: Read image version
         uses: bfren/read-file@v2
@@ -71,19 +80,41 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: ./3.16/Dockerfile
+          file: ./${{ matrix.alpine }}/Dockerfile
           build-args: |
             BF_IMAGE=${{ env.REPOSITORY_NAME }}
             BF_VERSION=${{ steps.version.outputs.contents }}
           push: ${{ startsWith(github.ref, 'refs/heads/') }}
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
-            bfren/alpine-s6:alpine3.16-dev
-            bfren/alpine-s6:alpine3.16-${{ steps.version_minor.outputs.contents }}-beta
-            bfren/alpine-s6:alpine3.16-${{ steps.version.outputs.contents }}-beta
-            ghcr.io/bfren/alpine-s6:alpine3.16-dev
-            ghcr.io/bfren/alpine-s6:alpine3.16-${{ steps.version_minor.outputs.contents }}-beta
-            ghcr.io/bfren/alpine-s6:alpine3.16-${{ steps.version.outputs.contents }}-beta
+            bfren/alpine-s6:alpine${{ matrix.alpine }}-dev
+            bfren/alpine-s6:alpine${{ matrix.alpine }}-${{ steps.version_minor.outputs.contents }}-beta
+            bfren/alpine-s6:alpine${{ matrix.alpine }}-${{ steps.version.outputs.contents }}-beta
+            ghcr.io/bfren/alpine-s6:alpine${{ matrix.alpine }}-dev
+            ghcr.io/bfren/alpine-s6:alpine${{ matrix.alpine }}-${{ steps.version_minor.outputs.contents }}-beta
+            ghcr.io/bfren/alpine-s6:alpine${{ matrix.alpine }}-${{ steps.version.outputs.contents }}-beta
+      -
+        name: Build and push default tags
+        id: docker_build
+        if: matrix.alpine == '3.17'
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./${{ matrix.alpine }}/Dockerfile
+          build-args: |
+            BF_IMAGE=${{ env.REPOSITORY_NAME }}
+            BF_VERSION=${{ steps.version.outputs.contents }}
+          push: ${{ startsWith(github.ref, 'refs/heads/') }}
+          platforms: linux/amd64,linux/arm/v7,linux/arm64
+          tags: |
+            bfren/alpine-s6:dev
+            bfren/alpine-s6:${{ steps.version_major.outputs.contents }}-beta
+            bfren/alpine-s6:${{ steps.version_minor.outputs.contents }}-beta
+            bfren/alpine-s6:${{ steps.version.outputs.contents }}-beta
+            ghcr.io/bfren/alpine-s6:dev
+            ghcr.io/bfren/alpine-s6:${{ steps.version_major.outputs.contents }}-beta
+            ghcr.io/bfren/alpine-s6:${{ steps.version_minor.outputs.contents }}-beta
+            ghcr.io/bfren/alpine-s6:${{ steps.version.outputs.contents }}-beta
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
