--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -95,7 +95,7 @@ jobs:
             ghcr.io/bfren/alpine-s6:alpine${{ matrix.alpine }}-${{ steps.version.outputs.contents }}-beta
       -
         name: Build and push default tags
-        id: docker_build
+        id: docker_build_default
         if: matrix.alpine == '3.17'
         uses: docker/build-push-action@v3
         with:
