Adding container description

--- a/3.13/Dockerfile
+++ b/3.13/Dockerfile
@@ -27,6 +27,7 @@ FROM bfren/alpine:alpine3.13.12-1.7.7
 COPY --from=build /log /log
 COPY --from=build /s6 /s6
 
+LABEL org.opencontainers.image.description="Alpine base image with S6 Overlay."
 LABEL org.opencontainers.image.source="https://github.com/bfren/docker-alpine-s6"
 
 ARG BF_IMAGE
