--- a/3.15/Dockerfile
+++ b/3.15/Dockerfile
@@ -40,6 +40,8 @@ ENV \
 ENV \
     # cron log levels are from 0 (most verbose) to 8 (default)
     BF_CRON_LOG_LEVEL=8 \
+    # set to 0 to disable setting permissions using ch.d during init phase
+    BF_ENABLE_INIT_CH=1 \
     # disable S6 Overlay service timeout - handle by timeout-up instead
     S6_CMD_WAIT_FOR_SERVICES_MAXTIME=0
 
@@ -47,6 +49,7 @@ COPY ./overlay /
 
 RUN bf-install
 
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=5 CMD [ "healthcheck" ]
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=5 \
+    CMD healthcheck
 
 ENTRYPOINT [ "/init" ]
