Using latest base images

--- a/3.19/Dockerfile
+++ b/3.19/Dockerfile
@@ -27,7 +27,7 @@ RUN \
 # STAGE 1: create final image
 #======================================================================================================================
 
-FROM bfren/alpine:alpine3.19.1-2.2.2-dev
+FROM bfren/alpine:alpine3.19.1-2.2.2
 COPY --from=build /s6 /s6
 
 LABEL org.opencontainers.image.description="Alpine base image with S6 Overlay."
